[project]
name = "pokemon-coloring-page"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "pillow>=10.4.0",
    "prompt-toolkit>=3.0.47",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]