[project]
name = "pokemon-coloring-page"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "pillow>=10.4.0",
    "prompt-toolkit>=3.0.47",
    "typer>=0.12.5",
]

[project.scripts]
pokemon-coloring-page = "pokemon_coloring_page.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"